--- a/Android/BooYa/AndroidManifest.xml
+++ b/Android/BooYa/AndroidManifest.xml
@@ -13,6 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+ 	<uses-permission android:name="android.permission.READ_CONTACTS" />
+ 	<uses-permission android:name="android.permission.INTERNET"/>
     </application>
 </manifest>
