--- a/Android/BooYa/AndroidManifest.xml
+++ b/Android/BooYa/AndroidManifest.xml
@@ -4,7 +4,8 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="4" />
-
+    <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
+	
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".RootActivity"
                   android:label="@string/app_name">
@@ -13,7 +14,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
- 	<uses-permission android:name="android.permission.READ_CONTACTS" />
- 	<uses-permission android:name="android.permission.INTERNET"/>
+        <activity android:name=".RegisterActivity"
+                  >
+        </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
