--- a/Android/BooYa/AndroidManifest.xml
+++ b/Android/BooYa/AndroidManifest.xml
@@ -14,8 +14,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"
-                  >
+        <activity android:name=".RegisterActivity">
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
