--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ project.pbxproj
 /iOS/BooYa/BooYa.xcodeproj/project.pbxproj
 /iOS/BooYa/BooYa/en.lproj/RootViewController.xib
 /iOS/BooYa/build
+/iOS/BooYa/BooYa.xcodeproj/amit.mode1v3
+/iOS/BooYa/BooYa.xcodeproj/amit.pbxuser
