--- a/Android/BooYa/AndroidManifest.xml
+++ b/Android/BooYa/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
 	
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name"  android:name="com.onoapps.BooYa.ContactsList">
         <activity android:name=".RootActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -15,6 +15,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity">
+        </activity>
+        <activity android:name=".BooYaListActivity">
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
