--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 *.swp
 *~.nib
+*.xib
 
 build/
 
@@ -11,3 +12,6 @@ build/
 *.mode1v3
 *.mode2v3
 xcuserdata
+project.pbxproj
+/iOS/BooYa/BooYa.xcodeproj/project.pbxproj
+/iOS/BooYa/BooYa/en.lproj/RootViewController.xib
