--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ project.pbxproj
 /iOS/BooYa/build
 /iOS/BooYa/BooYa.xcodeproj/amit.mode1v3
 /iOS/BooYa/BooYa.xcodeproj/amit.pbxuser
+/iOS/BooYa/BooYa.xcodeproj
+/iOS/BooYa/BooYa.xcodeproj/project.xcworkspace
