--- a/Android/BooYa/AndroidManifest.xml
+++ b/Android/BooYa/AndroidManifest.xml
@@ -18,7 +18,10 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name"  android:name="com.onoapps.BooYa.ContactsList">
         <activity android:name=".RootActivity"
                   android:label="@string/app_name">
-
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
         </activity>
         <activity android:name=".RegisterActivity">
         </activity>
@@ -28,13 +31,12 @@
         </activity>
         <activity android:name=".StuffActivity">
         </activity>  
-        <activity android:name=".StatsActivity">
+        <activity android:name=".StatsActivity"
+        android:theme="@android:style/Theme.Black.NoTitleBar">
+        
         </activity> 
 		<activity android:name="C2DMRegisterActivity" android:label="@string/app_name">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
+
 		</activity> 
         
         <service android:name=".C2DMReceiver" />   
@@ -54,6 +56,7 @@
 				<category android:name="com.onoapps.BooYa" />
 			</intent-filter>
 		</receiver>              
+                    
     </application>
     
 </manifest> 
