--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ project.pbxproj
 /iOS/BooYa/BooYa.xcodeproj/amit.pbxuser
 /iOS/BooYa/BooYa.xcodeproj
 /iOS/BooYa/BooYa.xcodeproj/project.xcworkspace
+/iOS/BooYa/BooYa/LoginViewController.xib
