--- a/Android/BooYa/AndroidManifest.xml
+++ b/Android/BooYa/AndroidManifest.xml
@@ -14,26 +14,29 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.SEND_SMS" />
 	
     <application android:icon="@drawable/icon" android:label="@string/app_name"  android:name="com.onoapps.BooYa.ContactsList">
         <activity android:name=".RootActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity">
+        <activity android:name=".RegisterActivity"
+        	android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         <activity android:name=".BooYaListActivity">
         </activity>
         <activity android:name=".BooYaBoardActivity">
         </activity>
-        <activity android:name=".StuffActivity">
+        <activity android:name=".StuffActivity"
+        	android:theme="@android:style/Theme.NoTitleBar">
         </activity>  
         <activity android:name=".StatsActivity"
-        android:theme="@android:style/Theme.Black.NoTitleBar">
-        
+        	android:theme="@android:style/Theme.NoTitleBar">    
         </activity> 
 		<activity android:name="C2DMRegisterActivity" android:label="@string/app_name">
 		</activity> 
